--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -22,6 +22,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+      - name: Configure Pages
+        uses: actions/configure-pages@v4
       - name: Upload site artifact
         uses: actions/upload-pages-artifact@v3
         with:
