--- a/.github/workflows/toggle-site.yml
+++ b/.github/workflows/toggle-site.yml
@@ -24,7 +24,7 @@ jobs:
           fi
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add index.html about.html contact.html sitemap.xml status/state.txt
+          git add -A
           git commit -m "Toggle site to ${next_state}"
       - name: Push changes
         run: git push
