--- a/.github/workflows/toggle-site.yml
+++ b/.github/workflows/toggle-site.yml
@@ -7,6 +7,8 @@ on:
 
 permissions:
   contents: write
+  pages: write
+  id-token: write
 
 jobs:
   toggle:
@@ -26,6 +28,15 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add -A
           git commit -m "Toggle site to ${next_state}"
+      - name: Configure Pages
+        uses: actions/configure-pages@v4
+      - name: Upload site artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: .
+      - name: Deploy to GitHub Pages
+        id: deploy
+        uses: actions/deploy-pages@v4
       - name: Push changes
         run: git push
 
